html/documentation/css/custom.css
/* ... */
.panel-footer {
	background-color: #f2f1f0;
	margin-bottom: 1em;
}

.panel-allsky {
	border-color: var(--panel-heading-color);
}
.panel-allsky>.panel-heading {
	color: #1a6184;
	background-color: #a4d9f3;
	border-color: #6f888e;
	font-weight: bold;
}

.settingInput {
	/* Input field in Allsky Settings page */
	width: 120px;
}

.settingInputSelect {
	padding: 0px 3px 0px 3px;
	text-align: right;
}

.settingInputTextNumber {
	padding: 0px 3px 0px 0px;
	text-align: right;
}

.settingInputWidetext {
	padding: 6px 5px;
}

.settingInputBoolean {
	margin-bottom: -3px !important;
	border-radius: 4px;
}

.info-item {
	width: 140px;
	float: left;
}

.switch-title {
	margin-bottom: 6px;
}

.switch-field {
	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
	/* old values: margin: 3px 2px -15px 0; */
	margin: 2px 0 -2px 0;
	display: inline-block;
	overflow: hidden;
	border-radius: 4px;
}

.switch-field input {
	position: absolute !important;
	clip: rect(0, 0, 0, 0);
	height: 1px;
	width: 1px;
	border: 0;
	overflow: hidden;
}

.switch-field label {
	float: left;
	display: inline-block;
	width: 60px;
	background-color: #e4e4e4;
	color: rgba(0, 0, 0, 0.6);
	font-size: 14px;
	font-weight: normal;
	text-align: center;
	text-shadow: none;
	padding: 6px 14px;
	border: 1px solid rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
}

.switch-field label:hover {
	cursor: pointer;
}

.switch-field input:checked+label {
	background-color: #3a9e55;
	color: white;
	font-weight: bold;
	-webkit-box-shadow: none;
	box-shadow: none;
}

.switch-field label:first-of-type {
	border-radius: 4px 0 0 4px;
}

.switch-field label:last-of-type {
	border-radius: 0 4px 4px 0;
}

h2 {
	margin-top: 0;
}

.nav>li>span {
	position: relative;
	display: block;
	padding: 10px 15px;
	color: #4b4a4b;
	cursor: pointer;
}

body.dark {
	background-color: #222222;
	color: var(--dark-text);
}

.dark #page-wrapper {
	background-color: #171717;
	border-left: #333333;
}

.dark .navbar-default {
	background-color: var(--navbar-background-color-dark);
	border: 1px solid var(--navbar-border-color-dark);
}

.dark .navbar-brand {
	color: var(--dark-text);
}

.dark .sidebar ul li {
	border-bottom: 1px solid #333333;
}

.dark .sidebar ul li a,
.dark .sidebar ul li span {
	color: var(--dark-text);
}

.dark .sidebar ul li a.active {
	background-color: #171717;
}

.dark .nav>li>a:hover {
	background-color: #1D1D1D;
}

.dark .panel {
	background-color: #272727;
}

.dark .panel-default,
.dark .panel-primary {
	border-color: #333333;
}
.dark .panel-danger>.panel-heading {
	color: #f2dede;
	background-color: #a94442;
	border-color: #ebccd1;
}
.dark .panel-allsky>.panel-heading {
	color: #a4d9f3;
	background-color: #1a6184;
	border-color: #6f888e;
}

.dark .panel-heading {
	background: #2f2f2f !important;
	color: white;
	border-bottom: 1px solid #2f2f2f;
}

.dark .modal-footer {
	border-top: 1px solid black !important;
	background-color: #222222 !important;
}

.dark .list-group-item {
	background-color: #272727;
	border: 1px solid #272727;
	color: #fff;	
}

.dark .list-group-item.active, .dark .list-group-item.active:focus, .dark .list-group-item.active:hover {
	z-index: 2;
	color: #fff;
	background-color: #337ab7;
	border-color: #337ab7;
}


.highlightedBox {
	border: 2px dashed red;
	margin-top: 30px;
	margin-bottom: 30px;
	padding: 10px 5px 10px 5px;
}

.bullet {
	font-weight: bold;
	font-size: 125%;
	display: inline;
	vertical-align: top;
}

.noChanges {
	font-weight: bold;
	font-size: 110%;
	padding: 5px 0 5px 2px;
}

.alert {
	margin-bottom: 3px;
	border-width: 1px;
}

button.close {
	opacity: 0.8;
	color: inherit;
	margin-top: -2px;
}

.alert td {
	padding: 0 5px 0 5px;
}

.alert td .important {
	font-weight: bold;
	font-size: 150%;
	padding-top: 1em;
	padding-bottom: 1em;
	padding-left: 1em;
}

table .alert-dismissable button {
	font-size: 175%;
}

table .alert-dismissable {
	text-align: center;
	padding-right: 4px;
}

.alert-dismissable .close {
	right: 0px;
	opacity: .6;
	top: -1px;
}

.alert-message {
	color: #31708f;
	background-color: #d9edf7;
	border-color: #92b5bd;
}

.dark .alert-message {
	color: #23485a;
	border-color: #99ccdd;
	background-color: #8b989f;
}

.alert-info {
	color: #31708f;
	background-color: #effaff;
	border-color: #92b5bd;
}

.dark .alert-info {
	/* TODO: change from .alert-info */
	color: #23485a;
	border-color: #99ccdd;
	background-color: #8b989f;
}

.alert-debug {
	color: #db8300;
	background-color: white;
	border-color: #db8300;
}

.dark .alert-debug {
	color: #e9a846;
	background-color: black;
	border-color: #e9a846#db8300;
}

.dark .alert-success {
	color: #95bb85;
	border-color: #8f9d84;
	background-color: #044a05;
}

.dark .alert-warning,
.dark .alert-warning a {
	color: #c0bba0;
	border-color: #c0bba0;
	background-color: #8a6b3b;
}

.dark .alert-danger,
.dark .alert-danger a {
	color: #f1b1b1;
	border-color: #f1b1b1;
	background-color: #a94442;
}

.dark .form-control,
.dark input[type="text"],
.dark input[type="number"],
.dark select {
	background-color: #171717;
	color: var(--dark-text);
	border-color: #555555;
}

input[type="text"].has-error {
	border-color: #d41c0f !important;
}

.text-danger {
	color: #d41c0f !important;
}

.dark .progress {
	background-color: #171717;
}

.progress-bar {
	color: black;
}

.dark .progress-bar {
	color: #ccc;
}

.dark .progress-bar-success {
	background-color: #276b27;
}

.dark .progress-bar-info {
	background-color: #2a5f6f;
}

.dark .progress-bar-warning {
	background-color: #a7742d;
}

/* used in system.php */
.progress-bar-animated {
	animation-name: progress_bar;
	animation-duration: 0.6s;
	animation-timing-function: ease;
}

@keyframes progress_bar {
	from {
		width: 0px
	}
}

.dark .table-striped>tbody>tr:nth-of-type(odd) {
	background-color: #171717;
}
/* ... */

